# Aether

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.json  dance.c  editor  main  main.c  utils.c
docs/: API.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md
include/: completion.h  events.h  files.h  parser.h  renderer.h  utils.h
src/: completion.c  events.c  files.c  main.c  parser..c  parser.c  renderer.c  utils.c
